boggersJS/test/unit/components/dialogue/scripts/invalid-syntax/branch-simple-returning-parent.dscript
################################
##### MAIN PATH
################################

Bob angry C
I am angry right now. Are you?
Yes -> FRIENDSHIP
No -> FIGHT
Maybe -> IGNORE
END

    ################################
    ##### FIGHT PATH
    ################################

    Bob pissed M FIGHT
    Okay then, FIGHT!

    Bob pissed M FIGHT
    TIME TO BOX.

    CONVERGE FIGHT

    ################################
    ##### FRIENDSHIP PATH
    ################################

    Bob pissed M FRIENDSHIP
    Okay then, FRIEND!

    Bob pissed M FRIENDSHIP
    TIME FOR SHOTS.

    CONVERGE FRIENDSHIP

    ################################
    ##### IGNORE PATH
    ################################

    Bob pissed M IGNORE
    ...

    Bob pissed M IGNORE
    ...hm?

    # Notice how IGNORE does not converge

##### Back at it again
# This time the IGNORE path is omitted
# because the previous IGNORE is still active

Bob angry C
Meh, you are alright... BUT I WILL ASK AGAIN!
Yes -> FRIENDSHIP
No -> FIGHT
END

    ################################
    ##### FIGHT PATH
    ################################

    Bob pissed M FIGHT
    Okay then, FIGHT!

    Bob pissed M FIGHT
    TIME TO BOX.

    CONVERGE FIGHT

    ################################
    ##### FRIENDSHIP PATH
    ################################

    Bob pissed M FRIENDSHIP
    Okay then, FRIEND!

    Bob pissed M FRIENDSHIP
    TIME FOR SHOTS.

    CONVERGE FRIENDSHIP

    ################################
    ##### IGNORE PATH
    ################################

    # YOU STILL NOT ALLOWED BACK IGNORE
    # SHOULD'VE CONVERGED WHEN YOU
    # HAD THE CHANCE SUCKA
    
    CONVERGE IGNORE

Bob neutral M
Meh, you are alright...
